Fix disable escaping for templating generated data interface
Change-type: patch

--- a/lib/templates/types.ts.ejs
+++ b/lib/templates/types.ts.ejs
@@ -1,6 +1,6 @@
 import { ContractDefinition } from '<%= sdk.name %>'
 <% for (const type of types) { %>
-<%= type.data %>
+<%- type.data %>
 export interface <%= type.contractInterfaceName %> extends ContractDefinition<<%= type.dataInterfaceName %> > {
     type: '<%= type.handle %>'
 }
