--- a/lib/templates/index.ts.ejs
+++ b/lib/templates/index.ts.ejs
@@ -1,5 +1,5 @@
-import { InputManifest, Result } from '<%= sdk.name %>'
-import type { <%= typeContractList %> } from './types'
+import type { InputManifest, Result } from '<%= sdk.name %>'
+import type { <%= requiredInterfaces %> } from './types'
 <% for (const func of functions) { %>
 export async function <%= func.name %> (input: InputManifest<<%= func.inputType %>>): Promise<Result<<%= func.outputType %>>[]> {
     // TODO: implement transformation
