--- a/lib/templates/types.ts.ejs
+++ b/lib/templates/types.ts.ejs
@@ -1,7 +1,11 @@
-import { ContractDefinition } from '<%= sdk.name %>'
+import type { Contract, ContractDefinition } from '<%= sdk.name %>'
 <% for (const type of types) { %>
 <%- type.data %>
-export interface <%= type.contractInterfaceName %> extends ContractDefinition<<%= type.dataInterfaceName %> > {
+export interface <%= type.contractInterfaceName %> extends Contract<<%= type.dataInterfaceName %> > {
     type: '<%= type.handle %>'
+}
+
+export interface <%= type.contractDefinitionInterfaceName %> extends ContractDefinition<<%= type.dataInterfaceName %> > {
+type: '<%= type.handle %>'
 }
 <% } %>
