InputManifest interface should use ContractDefinition.
Change-type: patch
Signed-off-by: Carlo Miguel F. Cruz <carloc@balena.io>

--- a/lib/templates/index.ts.ejs
+++ b/lib/templates/index.ts.ejs
@@ -1,7 +1,7 @@
 import type { InputManifest, Result } from '<%= sdk.name %>'
 import type { <%= requiredInterfaces %> } from './types'
 <% for (const func of functions) { %>
-export async function <%= func.name %> (input: InputManifest<<%= func.inputType %>>): Promise<Result<<%= func.outputType %>>[]> {
+export async function <%= func.handle %> (input: InputManifest<<%= func.inputType %>>): Promise<Result<<%= func.outputType %>>[]> {
     // TODO: implement transformation
 }
 <% } %>
